--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
 name = "hwi"
-version = "2.0.2"
-description = "A library for working with Bitcoin hardware wallets"
-authors = ["Andrew Chow <andrew@achow101.com>"]
+version = "2.0.1"
+description = "A library for working with Dogecoin hardware wallets"
+authors = ["Ross Nicoll <rnicoll@google.com>, Andrew Chow <andrew@achow101.com>"]
 license = "MIT"
 readme = "README.md"
-repository = "https://github.com/bitcoin-core/HWI"
-homepage = "https://github.com/bitcoin-core/HWI"
+repository = "https://github.com/rnicoll/HWI"
+homepage = "https://github.com/rnicoll/HWI"
 exclude = ["docs/", "test/"]
 include = ["hwilib/**/*.py", "udev/", "hwilib/py.typed"]
 packages = [
